Fixed Coded, added CSS, fixed HTML

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
                   <table>
                     <thead>
                       <tr>
-                        <button class="btn button1" data-roundCard="1" data-player="1">
+                        <button class="btn button1 player1card" data-roundCard="1" data-player="1">
                           <img src="/assets/cards/zbackside.png" alt="Image 1" />
                         </button>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <button class="btn button2" data-roundCard="2" data-player="1">
+                        <button class="btn button2 player1card" data-roundCard="2" data-player="1">
                           <img src="/assets/cards/zbackside.png" alt="Image 2" />
                         </button>
                       </tr>
                       <tr>
-                        <button class="btn button3" data-roundCard="3" data-player="1">
+                        <button class="btn button3 player1card" data-roundCard="3" data-player="1">
                           <img src="/assets/cards/zbackside.png" alt="Image 3" />
                         </button>
                       </tr>
@@ -79,19 +79,19 @@
                   <table>
                     <thead>
                       <tr>
-                        <button class="btn button4" data-roundCard="1" data-player="2">
+                        <button class="btn button4 player2card" data-roundCard="1" data-player="2">
                           <img src="/assets/cards/zbackside.png" alt="Image 4" />
                         </button>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <button class="btn button5" data-roundCard="2" data-player="2">
+                        <button class="btn button5 player2card" data-roundCard="2" data-player="2">
                           <img src="/assets/cards/zbackside.png" alt="Image 5" />
                         </button>
                       </tr>
                       <tr>
-                        <button class="btn button6" data-roundCard="3" data-player="2">
+                        <button class="btn button6 player2card" data-roundCard="3" data-player="2">
                           <img src="/assets/cards/zbackside.png" alt="Image 6" />
                         </button>
                       </tr>
