--- a/index.html
+++ b/index.html
@@ -1,155 +1,150 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>Truco V 0.1</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <link rel="stylesheet" type="text/css" href="style.css" />
   <body>
-    <h1></h1>
     <script type="module" src="script.js"></script>
-    <link rel="shortcut icon" href="favicon.ico">
-    <button style="width: 150px; height: 40px" class="deal">
-      Reveal Cards
-    </button>
-    <button style="width: 150px; height: 40px" class="reset">
-      Reset
-    </button>
-    <button style="width: 150px; height: 40px" class="newGame">
-      New Game
-    </button>
-    <label class="timerLabel">Tiempo jugando: 00:00</label>
+    <link rel="shortcut icon" href="favicon.ico" />
+    <div class="fullTable">
+      <div class="gameSpace">
+        <div class="p1InfoBox">
+          <div class="rectangle p1back">PLAYER ONE</div>
+          <div class="rectangle scoreEnvido1">
+            <label>Envido</label>
+            <label class="scoreEnvido1">XX</label>
+          </div>
+          <div class="rectangle infoSlotP1">
+            <div>Envido</div>
+            <button class="btn envidoButtonP1">Envido!</button>
+            <div>Truco</div>
+            <button class="btn trucoButtonP1">Truco!</button>
+            <button class="btn reTrucoButtonP1">Re truco!</button>
+            <button class="btn valeCuatroButtonP1">Vale cuatro!</button>
+            <div>Botones</div>
+            <button class="btn acceptButtonP1">Quiero</button>
+            <button class="btn rejectButtonP1">No Quiero</button>
+          </div>
 
-    <table>
-      <thead>
-        <tr>
-          <td>    <table class="fullTable">
-            <thead>
-              <tr>
-                <th class="tableTittle" colspan="5">TRUCO</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="playerCards">
-                <td class="infoSlot p1back">Player one<br /></td>
-                <td class="playerOneTable" rowspan="3">
-                  <table>
-                    <thead>
-                      <tr>
-                        <button class="btn button1 player1card" data-roundCard="1" data-player="1">
-                          <img src="/assets/cards/zbackside.png" alt="Image 1" />
-                        </button>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <button class="btn button2 player1card" data-roundCard="2" data-player="1">
-                          <img src="/assets/cards/zbackside.png" alt="Image 2" />
-                        </button>
-                      </tr>
-                      <tr>
-                        <button class="btn button3 player1card" data-roundCard="3" data-player="1">
-                          <img src="/assets/cards/zbackside.png" alt="Image 3" />
-                        </button>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <br />
-                </td>
-                <td class="playTable" rowspan="3">
-                  <table class="tg">
-                    <thead>
-                      <tr>
-                        <th class="slotR1P1"><img src="/assets/cards/zbackside.png" alt="p1c1"></img></th>
-                        <th class="slotR1P2"><img src="/assets/cards/zbackside.png" alt="p2c1"></img></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td class="slotR2P1"><img src="/assets/cards/zbackside.png" alt="p1c2"></img></td>
-                        <td class="slotR2P2"><img src="/assets/cards/zbackside.png" alt="p2c2"></img></td>
-                      </tr>
-                      <tr>
-                        <td class="slotR3P1"><img src="/assets/cards/zbackside.png" alt="p1c3"></img></td>
-                        <td class="slotR3P2"><img src="/assets/cards/zbackside.png" alt="p2c3"></img></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </td>
-                <td class="playerTwoTable" rowspan="3">
-                  <table>
-                    <thead>
-                      <tr>
-                        <button class="btn button4 player2card" data-roundCard="1" data-player="2">
-                          <img src="/assets/cards/zbackside.png" alt="Image 4" />
-                        </button>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <button class="btn button5 player2card" data-roundCard="2" data-player="2">
-                          <img src="/assets/cards/zbackside.png" alt="Image 5" />
-                        </button>
-                      </tr>
-                      <tr>
-                        <button class="btn button6 player2card" data-roundCard="3" data-player="2">
-                          <img src="/assets/cards/zbackside.png" alt="Image 6" />
-                        </button>
-                      </tr>
-                    </tbody>
-                  </table>
-                </td>
-                <td class="infoSlot p2back">Player Two<br /></td>
-              </tr>
-              <tr>
-                <td class="infoSlot">
-                  <label class="scoreEnvido1">Envido: XX</label>
-                </td>
-                <td class="infoSlot">
-                  <label class="scoreEnvido2">Envido: XX</label>
-                </td>
-              </tr>
-              <tr class="game--buttons">
-                <td class="infoSlot">
-                  <div>Envido</div>
-                  <button style="width: 150px; height: 40px" class="btn envidoButtonP1">Envido!</button>
-                  <div>Truco</div>
-                  <button style="width: 150px; height: 40px" class="btn trucoButtonP1">Truco!</button>
-                  <button style="width: 150px; height: 40px" class="btn reTrucoButtonP1">Re truco!</button>
-                  <button style="width: 150px; height: 40px" class="btn valeCuatroButtonP1">Vale cuatro!</button>
-                  <div>Botones</div>
-                  <button style="width: 150px; height: 40px" class="btn acceptButtonP1">Quiero</button>    
-                  <button style="width: 150px; height: 40px" class="btn rejectButtonP1">No Quiero</button>
-                  <label class="pointsP1">Puntos: XX</label>
-                </td>
-                <td class="infoSlot">
-                  <div>Envido</div>
-                  <button style="width: 150px; height: 40px" class="btn envidoButtonP2">Envido!</button>
-                  <div>Truco</div>
-                  <button style="width: 150px; height: 40px" class="btn trucoButtonP2">Truco!</button>
-                  <button style="width: 150px; height: 40px" class="btn reTrucoButtonP2">Re truco!</button>
-                  <button style="width: 150px; height: 40px" class="btn valeCuatroButtonP2">Vale cuatro!</button>
-                  <div>Botones</div>
-                  <button style="width: 150px; height: 40px" class="btn acceptButtonP2">Quiero</button>    
-                  <button style="width: 150px; height: 40px" class="btn rejectButtonP2">No Quiero</button>
-                  <label class="pointsP2">Puntos: XX</label>
-              </tr>
-            </tbody>
-          </table></td>
-          <td class="actions">     
-            <div class="games">
-              <!-- items will be added here dynamically -->
+          <div class="rectangle pointsP1">
+            <label>Puntos: XX</label>
+          </div>
+        </div>
+        <div class="playerOneTable">
+          <div class="centered-container">
+            <button
+              class="button1 player1card cardBtn"
+              data-roundCard="1"
+              data-player="1"
+            >
+              <img src="/assets/cards/zbackside.png" alt="Image 1" />
+            </button>
+            <button
+              class="button2 player1card cardBtn"
+              data-roundCard="2"
+              data-player="1"
+            >
+              <img src="/assets/cards/zbackside.png" alt="Image 2" />
+            </button>
+            <button
+              class="button3 player1card cardBtn"
+              data-roundCard="3"
+              data-player="1"
+            >
+              <img src="/assets/cards/zbackside.png" alt="Image 3" />
+            </button>
+          </div>
+        </div>
+        <div class="playTable">
+          <div class="box-content">
+            <label class="timerLabel">Tiempo jugando: 00:00</label>
+            <div class="card-grid">
+              <div class="card-slot slotR1P1">
+                <img src="/assets/cards/zbackside.png" alt="p1c1" />
+              </div>
+              <div class="card-slot slotR1P2">
+                <img src="/assets/cards/zbackside.png" alt="p2c1" />
+              </div>
+              <div class="card-slot slotR2P1">
+                <img src="/assets/cards/zbackside.png" alt="p1c2" />
+              </div>
+              <div class="card-slot slotR2P2">
+                <img src="/assets/cards/zbackside.png" alt="p2c2" />
+              </div>
+              <div class="card-slot slotR3P1">
+                <img src="/assets/cards/zbackside.png" alt="p1c3" />
+              </div>
+              <div class="card-slot slotR3P2">
+                <img src="/assets/cards/zbackside.png" alt="p2c3" />
+              </div>
             </div>
-            <div class="movements">
-              <!-- items will be added here dynamically -->
-            </div>           
-          </td>
-        </tr>
-      </thead>
-      </table>
+            <label class="playerTurnLabel">"Turno del player -->"</label>
+          </div>
+        </div>
+        <div class="playerTwoTable">
+          <div class="centered-container">
+            <button
+              class="button4 player2card cardBtn"
+              data-roundCard="1"
+              data-player="2"
+            >
+              <img src="/assets/cards/zbackside.png" alt="Image 4" />
+            </button>
+            <button
+              class="button5 player2card cardBtn"
+              data-roundCard="2"
+              data-player="2"
+            >
+              <img src="/assets/cards/zbackside.png" alt="Image 5" />
+            </button>
+            <button
+              class="button6 player2card cardBtn"
+              data-roundCard="3"
+              data-player="2"
+            >
+              <img src="/assets/cards/zbackside.png" alt="Image 6" />
+            </button>
+          </div>
+        </div>
+        <div class="p2InfoBox">
+          <div class="rectangle p2back">PLAYER TWO</div>
+          <div class="rectangle scoreEnvido2">
+            <label>Envido</label>
+            <label class="scoreEnvido2">XX</label>
+          </div>
+          <div class="rectangle infoSlotP2">
+            <div>ENVIDO</div>
+            <button class="btn envidoButtonP2">ENVIDO!</button>
+            <div>TRUCO</div>
+            <button class="btn trucoButtonP2">TRUCO!</button>
+            <button class="btn reTrucoButtonP2">RE TRUCO!</button>
+            <button class="btn valeCuatroButtonP2">VALE CUATRO!</button>
+            <div>BOTONES</div>
+            <button class="btn acceptButtonP2">QUIERO!</button>
+            <button class="btn rejectButtonP2">NO QUIERO!</button>
+          </div>
 
-
-
-
-    
+          <div class="rectangle pointsP2">
+            <label>Puntos: XX</label>
+          </div>
+        </div>
+      </div>
+      <div class="actions">
+        <div class="rectangle matchActions">Match results!</div>
+        <div class="rectangle games">
+          <!-- items will be added here dynamically -->
+        </div>
+        <div class="rectangle roundActions">Round actions!</div>
+        <div class="rectangle movements">
+          <!-- items will be added here dynamically -->
+        </div>
+      </div>
+    </div>
   </body>
 </html>
