--- a/index.html
+++ b/index.html
@@ -146,5 +146,10 @@
         </div>
       </div>
     </div>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+      integrity="sha384-Jn538RbIcYzEIsI5Mxp7z5MvaE0jb2M5JTdZ5OL+qO2RvF5x0ZFLJ0t8b9abJGqE"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
