HTML and CSS fixes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Truco V 0.1</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -63,7 +69,7 @@
         </div>
         <div class="playTable">
           <div class="box-content">
-            <label class="timerLabel">Tiempo jugando: 00:00</label>
+            <!-- <label class="timerLabel">Tiempo jugando: 00:00</label>-->
             <div class="card-grid">
               <div class="card-slot slotR1P1">
                 <img src="/assets/cards/zbackside.png" alt="p1c1" />
@@ -84,7 +90,7 @@
                 <img src="/assets/cards/zbackside.png" alt="p2c3" />
               </div>
             </div>
-            <label class="playerTurnLabel">"Turno del player -->"</label>
+            <!-- <label class="playerTurnLabel">"Turno del player"</label>-->
           </div>
         </div>
         <div class="playerTwoTable">
@@ -119,15 +125,15 @@
             <label class="scoreEnvido2">XX</label>
           </div>
           <div class="rectangle infoSlotP2">
-            <div>ENVIDO</div>
-            <button class="btn envidoButtonP2">ENVIDO!</button>
-            <div>TRUCO</div>
-            <button class="btn trucoButtonP2">TRUCO!</button>
-            <button class="btn reTrucoButtonP2">RE TRUCO!</button>
-            <button class="btn valeCuatroButtonP2">VALE CUATRO!</button>
-            <div>BOTONES</div>
-            <button class="btn acceptButtonP2">QUIERO!</button>
-            <button class="btn rejectButtonP2">NO QUIERO!</button>
+            <div>Envido</div>
+            <button class="btn envidoButtonP2">Envido!</button>
+            <div>Truco</div>
+            <button class="btn trucoButtonP2">Truco!</button>
+            <button class="btn reTrucoButtonP2">Re Truco!</button>
+            <button class="btn valeCuatroButtonP2">Vale Cuatro!</button>
+            <div>Botones</div>
+            <button class="btn acceptButtonP2">Quiero!</button>
+            <button class="btn rejectButtonP2">Nn Quiero!</button>
           </div>
 
           <div class="rectangle pointsP2">
