--- a/index.html
+++ b/index.html
@@ -15,6 +15,54 @@
     />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img
+          src="/assets/logo.svg"
+          alt="Logo"
+          width="30"
+          height="24"
+          class="d-inline-block align-text-top"
+        />
+        Truco Argentino!
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="https://www.pagat.com/put/truco_ar.html"
+              target="_blank"
+              >Rules</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link newGame" href="#">New Game</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link timerLabel" href="#">Playing time: 00:00</a>
+            <i class="bi bi-alarm"></i>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <body>
     <script type="module" src="script.js"></script>
     <link rel="shortcut icon" href="favicon.ico" />
