Envido and Truco fixes, score and points fixed

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="rectangle p1back">PLAYER ONE</div>
           <div class="rectangle scoreEnvido1">
             <label>Envido</label>
-            <label class="scoreEnvido1">XX</label>
+            <label class="scoreEnvidoValue1">XX</label>
           </div>
           <div class="rectangle infoSlotP1">
             <div>Envido</div>
@@ -173,8 +173,7 @@
           <div class="rectangle p2back">PLAYER TWO</div>
           <div class="rectangle scoreEnvido2">
             <label>Envido</label>
-            <br />
-            <label class="scoreEnvido2">XX</label>
+            <label class="scoreEnvidoValue2">XX</label>
           </div>
           <div class="rectangle infoSlotP2">
             <div>Envido</div>
@@ -185,7 +184,7 @@
             <button class="btn valeCuatroButtonP2">Vale Cuatro!</button>
             <div>Botones</div>
             <button class="btn acceptButtonP2">Quiero!</button>
-            <button class="btn rejectButtonP2">Nn Quiero!</button>
+            <button class="btn rejectButtonP2">No Quiero!</button>
           </div>
 
           <div class="rectangle pointsP2">
